[package]
name = "runapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
colored = "2.0.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
dirs = "5.0.1"
chrono = "0.4.41"
